--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_enterprise_note</title>
+  <title>Enterprise Note</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
